# advent-of-code

./: .gitignore  README.md
2019/01/: day1.py
2019/02/: day2.py
2019/03/: day3.py
2019/04/: day4.py
2019/05/: day5.py
2019/06/: day6.py
2020/02/: part1.py  part2.py
2020/05/: part2.py
2020/06/: part2.py
2021/01/src/: main.rs
2021/02/src/: main.rs  part1.rs  part2.rs
2021/03/src/: main.rs
elixir/: README.md
elixir/2023/: .gitignore  README.md  mix.exs
elixir/2023/lib/advent_of_code/: d01.ex  d02.ex  d04.ex
elixir/2023/lib/mix/tasks/: d1.p1.ex  d1.p2.ex  d2.p1.ex  d2.p2.ex  d4.p1.ex
elixir/2023/test/: advent_of_code_test.exs
go/2025/: .gitignore  2025  Justfile  go.mod  main.go
go/2025/day/d01/: d1.go  instructions.md  p1.go
go/2025/day/d03/: d3.go  d3_test.go  instructions.md
go/2025/day/d04/: d4.go  d4_test.go
go/2025/utils/: utils.go
ocaml/: .gitignore
ocaml/2019/aoc/: aoc.opam  dune-project
ocaml/2019/aoc/lib/: cpu.ml  dune  error.ml  instruction.ml  intcode.ml  io.ml  memory.ml  utils.ml
ocaml/2019/aoc/test/: aoc.ml  dune
ocaml/2022/: README.md
ocaml/2022/aoc/: aoc.opam  dune-project
ocaml/2022/aoc/lib/: utils.ml
python/2019/03/: day3.py
python/2019/04/: day4.py
python/2019/05/: day5.py
python/2020/02/: part1.py
python/2020/03/: part1.py  part2.py
python/2020/04/: part1.py  part2.py
python/2020/05/: part1.py
python/2020/06/: part1.py
rust/: .gitignore
rust/2021/02/src/: main.rs  parse.rs  part1.rs  part2.rs  utils.rs
rust/2021/03/src/: part1.rs  utils.rs
rust/2022/: Cargo.toml  README.md
