(lang dune 3.4)

(name aoc)

(generate_opam_files true)

(source
 (github yanniskatsaros/advent-of-code))

(authors "Yannis Katsaros")

(maintainers "Yannis Katsaros")

(license GPL-3.0)

(documentation https://github.com/yanniskatsaros/advent-of-code)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  ("ocaml" "advent-of-code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
